# colord-brightness

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: ColordHandler.h  FileWatcher.h
scripts/: colord-brightness.service
src/: ColordHandler.cpp  FileWatcher.cpp  colord_brightness.cpp  test.cpp
tests/: test.cpp  test_file_watcher.cpp
